// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableBody Style tests should render with default styles 1`] = `
.circuit-2 {
  vertical-align: middle;
}

tbody .circuit-2:last-child th,
tbody .circuit-2:last-child td {
  border-bottom: none;
}

.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class="circuit-2"
    data-testid="table-row"
  >
    <td
      class="circuit-0"
      data-testid="table-cell"
    >
      Foo
    </td>
    <td
      class="circuit-0"
      data-testid="table-cell"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody Style tests should render with fixed header styles 1`] = `
.circuit-4 {
  vertical-align: middle;
}

tbody .circuit-4:last-child th,
tbody .circuit-4:last-child td {
  border-bottom: none;
}

.circuit-3 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
}

@media (max-width:767px) {
  .circuit-0 {
    left: 0;
    top: auto;
    position: absolute;
    width: 145px;
    overflow-wrap: break-word;
  }
}

.circuit-2 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
  display: none;
}

@media (max-width:767px) {
  .circuit-2 {
    display: table-cell;
    min-width: 145px;
    max-width: 145px;
    width: 145px;
  }
}

<tbody>
  <tr
    class="circuit-4"
    data-testid="table-row"
  >
    <th
      class="circuit-0 circuit-1"
      data-testid="table-header"
      scope="row"
    >
      Foo
    </th>
    <td
      aria-hidden="true"
      class="circuit-2"
      data-testid="table-cell"
      role="presentation"
    >
      Foo
    </td>
    <td
      class="circuit-3"
      data-testid="table-cell"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody logic tests sortHover should not render a cell with hovered styles if its column is not currently hovered 1`] = `
.circuit-2 {
  vertical-align: middle;
}

tbody .circuit-2:last-child th,
tbody .circuit-2:last-child td {
  border-bottom: none;
}

.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<tbody>
  <tr
    class="circuit-2"
    data-testid="table-row"
  >
    <td
      class="circuit-0"
      data-testid="table-cell"
    >
      Foo
    </td>
    <td
      class="circuit-0"
      data-testid="table-cell"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody logic tests sortHover should render a cell with hovered styles if its column is currently hovered 1`] = `
.circuit-2 {
  vertical-align: middle;
}

tbody .circuit-2:last-child th,
tbody .circuit-2:last-child td {
  border-bottom: none;
}

.circuit-1 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
  background-color: #F5F5F5;
}

<tbody>
  <tr
    class="circuit-2"
    data-testid="table-row"
  >
    <td
      class="circuit-0"
      data-testid="table-cell"
    >
      Foo
    </td>
    <td
      class="circuit-1"
      data-testid="table-cell"
    >
      Bar
    </td>
  </tr>
</tbody>
`;
